# image_processingPP

./: .gitignore  CMakeLists.txt  LOGBOOK.md  MASK.cpp  README.md  VideoCapture  VideoCapture.cpp  cOpenCV.cpp  capture_mov_processing_frames.cpp  checkpoint  raspicam_example.cpp  simpleCV.cpp  simpleGrab.cpp  simpleGrb  simpletest_raspicam.cpp
gray/: CMakeLists.txt  gray.cpp
histogram/: CMakeLists.txt  histogram.cpp  histogramm.cpp
old/: VideoCapture.cpp  cOpenCV.cpp  raspicam_example.cpp  simpleCV.cpp  simpleGrab.cpp  simpletest_raspicam.cpp
timelapse/: CMakeLists.txt  example.cpp  timelapse.cpp
value/: CMakeLists.txt  value.cpp  value2.cpp
